fixed spacing between info in menu

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -411,6 +411,7 @@ ul li {
 .content .hero .strip1 .details {
   display: flex;
   justify-content: flex-end;
+  margin-right: 15px;
 }
 .content .hero .strip1 .details h4 {
   margin-right: 10px;
@@ -455,14 +456,14 @@ ul li {
 @media (min-width: 768px) {
   .content .hero .strip2 {
     width: 95%;
-    margin: 0 auto;
+    margin-left: 15px;
     grid-template-columns: 50% auto;
   }
 }
 @media (min-width: 1024px) {
   .content .hero .strip2 {
     width: 98%;
-    margin: 0 auto;
+    margin-left: 15px;
     grid-template-columns: 50% auto;
   }
 }
@@ -544,6 +545,18 @@ ul li {
   .content .menu .title {
     margin-left: 16px;
     margin-bottom: 24px;
+  }
+  .content .menu article h2 {
+    margin-top: 24px;
+    margin-left: 17px;
+  }
+  .content .menu article .info {
+    margin-top: 24px;
+    margin-left: 17px;
+  }
+  .content .menu article .button {
+    margin-top: 24px;
+    margin-left: 17px;
   }
 }
 .content .footer {
